--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       width: 100%;
       max-width: 500px;
       height: auto;
+      aspect-ratio: 1 / 1; /*
       background: white;
       border: 2px solid #ccc;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      overflow: hidden; /*
+      overflow: hidden;
     }
     canvas {
       display: block;
@@ -81,8 +82,8 @@
   <script>
     function resizeCanvas() {
   const size = Math.min(canvas.parentElement.clientWidth, 500);
-  canvas.width = size;
-  canvas.height = size;
+  canvas.width = size +“px”;
+  canvas.height = size +“px”;
   drawWheel();
     }
     const canvas = document.getElementById("wheel");
