--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     }
     const canvas = document.getElementById("wheel");
     const ctx = canvas.getContext("2d");
-    const radius = 225;
+     const radius = canvas.width / 2 - 5;
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
 
