--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       width: 100%;
       max-width: 500px;
       height: auto;
-      aspect-ratio: 1 / 1; /*
+      aspect-ratio: 1 / 1;
       background: white;
       border: 2px solid #ccc;
       display: flex;
@@ -82,13 +82,13 @@
   <script>
     function resizeCanvas() {
   const size = Math.min(canvas.parentElement.clientWidth, 500);
-  canvas.width = size +“px”;
-  canvas.height = size +“px”;
+  canvas.width = size +"px";
+  canvas.height = size +"px";
   drawWheel();
     }
     const canvas = document.getElementById("wheel");
     const ctx = canvas.getContext("2d");
-     const radius = canvas.width / 2 - 5;
+    const radius = canvas.width / 2 - 5;
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
 
@@ -115,6 +115,9 @@
       const sections = getSections();
       const colors = getColors(sections.length);
       const sectionAngle = (2 * Math.PI) / sections.length;
+      const radius = canvas.width / 2 - 5;
+    const centerX = canvas.width / 2;
+    const centerY = canvas.height / 2;
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       for (let i = 0; i < sections.length; i++) {
         const start = angle + i * sectionAngle;
