--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <script>
     function resizeCanvas() {
   const size = Math.min(canvas.parentElement.clientWidth, 500);
-  canvas.width = size +"px";
-  canvas.height = size +"px";
+  canvas.width = size;
+  canvas.height = size;
   drawWheel();
     }
     const canvas = document.getElementById("wheel");
