--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </style>
 </head>
 <body>
-  <img src="logo_truth_editor.png" alt="ロゴ" style="max-width: 90%; height: auto; margin-bottom: 20px;" />
+  <img src="無題4_20250611183541.png" alt="ロゴ" style="max-width: 90%; height: auto; margin-bottom: 20px;" />
   <div id="container">
     <canvas id="wheel" width="500" height="500"></canvas>
     <div id="label">▲</div>
