--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       align-items: center;
       margin: 0;
       padding: 20px;
-      background: #f0f0f0;
+      background: #FFF9E3;
       box-sizing: border-box;
     }
     #container {
@@ -69,7 +69,7 @@
   </style>
 </head>
 <body>
-  <img src="無題4_20250611183541.png" alt="ロゴ" style="max-width: 90%; height: auto; margin-bottom: 20px;" />
+  <img src="無題4_20250611183541.png" alt="ロゴ" style="max-width: 60%; height: auto; margin-bottom: 20px;" />
   <div id="container">
     <canvas id="wheel" width="500" height="500"></canvas>
     <div id="label">▲</div>
